Fix: apply filters on mobile only when the view items button is clicked, persisnt reset filters to prev ones when cross icon is clicked

--- a/src/components/Cart/CouponsModal/NoCoupons.css
+++ b/src/components/Cart/CouponsModal/NoCoupons.css
@@ -1,6 +1,7 @@
 .no-coupons-body {
   padding: var(--spacing-sm) var(--spacing-lg);
   text-align: center;
+  margin-bottom: var(--spacing-md);
 }
 .text-container {
   display: flex;
